# GreenByte_HackODS_UNAM

./: .gitignore  .nojekyll  LICENSE  README.html  README.md  ai-log.md  index.html  main.py  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: publish.yml
dashboard/: README.md  _quarto.yml  custom.css  dashboard.css  greenbyte.css  greenbyte_ods13.quarto_ipynb  greenbyte_ods13.quarto_ipynb_1  index.html  index.qmd
dashboard/resultados/: analisis_quintiles_ghm_v3.csv  correlaciones_bh_A_v3.csv  correlaciones_bh_B_v3.csv  mann_kendall_tendencias_v3.csv  master_greenbyte_v4_hotspots.csv  validacion_k_clusters_v3.csv
datos/: README.md
datos/datos_procesados/: MunicipiosSequia.xlsx  anomalias_v3.csv  datos_2023_clusters_hotspots_v3.csv  defunciones_calor.csv  sst_descomposicion_enso.csv  tendencias_nacionales_v3.csv
notebook/: Extraccion_Variables_Ambientales_Mexico.ipynb
scripts/: Extraccion_Variables_Ambientales_Mexico.ipynb
site_libs/bootstrap/: bootstrap.min.css
