[project]
name = "greenbyte-hackods-unam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esda>=2.9.0",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pymannkendall>=1.4.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
